--- a/Copy_of_Sample_EDA_Telecom_Churn_Analysis_Demo_Project.ipynb
+++ b/Copy_of_Sample_EDA_Telecom_Churn_Analysis_Demo_Project.ipynb
@@ -6,21 +6,10 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "vncDsAP0Gaoa",
         "beRrZCGUAJYm",
         "yQaldy8SH6Dl",
         "PH-0ReGfmX4f",
         "mDgbUHAGgjLW",
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
-        "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
-        "35m5QtbWiB9F",
-        "PoPl-ycgm1ru",
-        "H0kj-8xxnORC",
         "nA9Y7ga8ng1Z",
         "PBTbrJXOngz2",
         "u3PMJOP6ngxN",
@@ -305,7 +294,7 @@
       "cell_type": "code",
       "source": [
         "# Load Dataset\n",
-        "database = \"\"\n"
+        "dataset = pd.read_csv('/content/drive/MyDrive/project/Hotel Bookings.csv')\n"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -317,7 +306,7 @@
       "cell_type": "code",
       "source": [
         "# Importing the dataset\n",
-        "dataset = mysql('''SELECT * FROM telecom_churn''')"
+        "dataset = mysql('''SELECT * FROM telecom_churn''')\n"
       ],
       "metadata": {
         "id": "CEhiayUv1809"
@@ -462,14 +451,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The dataset given is a dataset from Telecommunication industry, and we have to analysis the churn of customers and the insights behind it.\n",
-        "\n",
-        "Churn prediction is analytical studies on the possibility of a customer abandoning a product or service. The goal is to understand and take steps to change it before the costumer gives up the product or service.\n",
-        "\n",
-        "The above dataset has 3333 rows and 20 columns. There are no mising values and duplicate values in the dataset. "
+        "This data set contains a single file which compares various booking information between two hotels: a city hotel and a resort hotel.Includes information such as when the booking was made, length of stay, the number of adults, children, and/or babies, and the number of available parking spaces, among other things. The dataset contains a total of 119390 rows and 32 columns.Dataset Contains duplicated items i.e 31944 which is removed later .In this dataset we find data types of every columns i.e (Int, float ,string) and observe that some columns data types is not accurate and remove later .We find unique value of every columns it means what actual values in every columns"
       ],
       "metadata": {
-        "id": "gfoNAAC-nUe_"
+        "id": "kGZg56HCUSTF"
       }
     },
     {
