--- a/EDA_Project_HBA.ipynb
+++ b/EDA_Project_HBA.ipynb
@@ -4738,17 +4738,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### What do you suggest the client to achieve Business Objective ? \n",
-        "Explain Briefly."
-      ],
-      "metadata": {
-        "id": "8G2x9gOozGDZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
+        "## **Business objective attained as follows:**\n",
+        "\n",
+        "1. Identify the key business objectives: Before starting any analysis, it is important to understand the key business objectives of hotel booking analysis for Almabetter. This could be to increase revenue, optimize pricing, or improve customer satisfaction.\n",
+        "\n",
+        "2. Define the problem statement: Once the objectives have been identified, define the problem statement. This will help in narrowing down the focus of the analysis and identifying the key metrics to be tracked.\n",
+        "\n",
+        "3. Collect data: Data is the backbone of any analysis. Collect relevant data on bookings, cancellations, customer reviews, pricing, occupancy rates, and other factors that may impact the hotel's business objectives.\n",
+        "\n",
+        "4. Clean and preprocess data: Raw data can be messy and incomplete. Clean and preprocess the data to ensure that it is ready for analysis. This may involve removing duplicates, handling missing data, and transforming data into a suitable format.\n",
+        "\n",
+        "5. Analyze the data: Use statistical techniques and data visualization tools to analyze the data. This could involve identifying patterns, trends, and correlations between different variables.\n",
+        "\n",
+        "6. Identify key drivers: Based on the analysis, identify the key drivers that impact the business objectives. These could be factors like seasonality, pricing, customer reviews, or location.\n",
+        "\n",
+        "7. Develop insights: Use the analysis and key drivers to develop actionable insights that can help in achieving the business objectives. For example, reducing prices during the offseason or improving customer service to increase customer satisfaction.\n",
+        "\n",
+        "8. Implement solutions: Based on the insights, implement solutions that can help achieve the business objectives. This could involve changes to pricing, marketing strategies, or operational processes.\n",
+        "\n",
+        "9. Monitor and track progress: Monitor and track the progress of the solutions implemented. This will help in identifying if they are working as intended and if any further adjustments need to be made.\n",
+        "\n",
+        "10. Continuously optimize: Business objectives can change over time. Continuously optimize the analysis and solutions to ensure that they align with the current business objectives of hotel booking analysis for Almabette"
       ],
       "metadata": {
         "id": "pASKb0qOza21"
@@ -4766,7 +4776,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the conclusion here."
+        "1. City Hotel seems to be more preferred among travellers and it also generates more revenue & profit.\n",
+        "\n",
+        "2. Most number of bookings are made in July and August as compared rest of the months.\n",
+        "\n",
+        "3. Room Type A is the most preferred room type among travellers.\n",
+        "\n",
+        "Most number of bookings are made from Portugal & Great Britain.\n",
+        "\n",
+        "4. Most of the guest stays for 1-4 days in the hotels.\n",
+        "\n",
+        "City Hotel retains more number of guests.\n",
+        "\n",
+        "5. Around one-fourth of the total bookings gets cancelled. More cancellations are from City Hotel.\n",
+        "\n",
+        "6. New guest tends to cancel bookings more than repeated customers.\n",
+        "\n",
+        "7. Lead time, number of days in waiting list or assignation of reserved room to customer does not affect cancellation of bookings.\n",
+        "\n",
+        "8. Corporate has the most percentage of repeated guests while TA/TO has the least whereas in the case of cancelled bookings TA/TO has the most percentage while Corporate has the least.\n",
+        "\n",
+        "9. The length of the stay decreases as ADR increases probably to reduce the cost."
       ],
       "metadata": {
         "id": "Fjb1IsQkh3yE"
