--- a/EDA_Project_HBA.ipynb
+++ b/EDA_Project_HBA.ipynb
@@ -1822,9 +1822,7 @@
         "#Check the percentage null value in children col\n",
         "\n",
         "percentage_children_null = miss_values[3] / uni_num_of_rows*100\n",
-        "percentage_children_null\n",
-        "     \n",
-        "\n"
+        "percentage_children_null"
       ],
       "metadata": {
         "colab": {
@@ -2526,7 +2524,7 @@
         "\n",
         "----Replace of Values in columns----\n",
         "\n",
-        "a)is_canceled, is_not_canceled & is_repeated_guest: We have seen, that these columns contains only 0,1 as values which represent the status of booing cancellation. We replace these values (0,1) from 'Canceled' & 'Not canceled. In the same way for column 'is_repeated_guest', we replace 0,1 from 'Repeated' & 'Not repeated'. Now this values will help to make better understanding while visulization.\n",
+        "a)is_canceled, is_not_canceled & is_repeated_guest: We have seen, that these columns contains only 0,1 as values which represent the status of booking cancellation. We replace these values (0,1) from 'Canceled' & 'Not canceled. In the same way for column 'is_repeated_guest', we replace 0,1 from 'Repeated' & 'Not repeated'. Now this values will help to make better understanding while visulization.\n",
         "\n",
         "----Changes in data type of values in columns----\n",
         "\n",
@@ -2693,7 +2691,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***Here, we found that the booking number is Higher in City Hotel which is 61.12% than Resort Hotel which is 38.87%. Hence we can say that City hotel has more consumption***"
+        "***Here, we found that the booking number is Higher in City Hotel which is 66.45% than Resort Hotel which is 33.55%. Hence we can say that City hotel has more consumption***"
       ],
       "metadata": {
         "id": "1qYJjfmOCvyu"
@@ -2769,6 +2767,15 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FArf9Y1STk0a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "***In this chart, we presented the cancellation rate of the hotels booking***"
@@ -2782,7 +2789,7 @@
       "source": [
         "\n",
         "2. What is/are the insight(s) found from the chart?\n",
-        "***Here, we found that overall more than 25% of booking got cancelled***"
+        "***Here, we found that overall more than 37.04% of booking got cancelled***"
       ],
       "metadata": {
         "id": "LcQnabjG70B0"
@@ -2794,7 +2801,7 @@
         "3. Will the gained insights help creating a positive business impact?\n",
         "Are there any insights that lead to negative growth? Justify with specific reason.\n",
         "\n",
-        "***Here, we can see, that more than 27% booking getting cancelled.***\n",
+        "***Here, we can see, that more than 37.04% booking getting cancelled.***\n",
         "\n",
         "***Solution: We can check the reason of cancellation of a booking & need to get this sort on business level***"
       ],
@@ -2934,7 +2941,7 @@
       "cell_type": "markdown",
       "source": [
         "2. What is/are the insight(s) found from the chart?\n",
-        "***The above percentage shows month May, July and Aug are the highest booking months due to holiday season. Recommending aggressive advertisement to lure more and more customers.***"
+        "***The above percentage shows month August is the highest booking months due to holiday season. Recommending aggressive advertisement to lure more and more customers.***"
       ],
       "metadata": {
         "id": "wZQmLtrE8tid"
@@ -3004,7 +3011,7 @@
       "cell_type": "markdown",
       "source": [
         "2. What is/are the insight(s) found from the chart?\n",
-        "***Here, we can see that the number of repeated guests is very less as compared to overall guests***"
+        "***Here, we can see that the number of repeated guests is very less(3.19 %) as compared to overall guests***"
       ],
       "metadata": {
         "id": "xGb1Ikp79A9y"
@@ -3855,28 +3862,29 @@
       "source": [
         "1. City Hotel seems to be more preferred among travellers and it also generates more revenue & profit.\n",
         "\n",
-        "2. Most number of bookings are made in July and August as compared rest of the months.\n",
+        "2. Most number of bookings are made in August as compared rest of the months.\n",
         "\n",
         "3. Room Type A is the most preferred room type among travellers.\n",
         "\n",
-        "Most number of bookings are made from Portugal & Great Britain.\n",
+        "4. Most number of bookings are made from Portugal & Great Britain.\n",
         "\n",
-        "4. Most of the guest stays for 1-4 days in the hotels.\n",
+        "5. Most of the guest stays for 1-4 days in the hotels.\n",
         "\n",
-        "City Hotel retains more number of guests.\n",
+        "6. City Hotel retains more number of guests.\n",
         "\n",
-        "5. Around one-fourth of the total bookings gets cancelled. More cancellations are from City Hotel.\n",
+        "7. Around one-fourth of the total bookings gets cancelled. More cancellations are from City Hotel.\n",
         "\n",
-        "6. New guest tends to cancel bookings more than repeated customers.\n",
+        "8. New guest tends to cancel bookings more than repeated customers.\n",
         "\n",
-        "7. Lead time, number of days in waiting list or assignation of reserved room to customer does not affect cancellation of bookings.\n",
+        "9. Lead time, number of days in waiting list or assignation of reserved room to customer does not affect cancellation of bookings.\n",
         "\n",
-        "8. Corporate has the most percentage of repeated guests while TA/TO has the least whereas in the case of cancelled bookings TA/TO has the most percentage while Corporate has the least.\n",
+        "10. Corporate has the most percentage of repeated guests while TA/TO has the least whereas in the case of cancelled bookings TA/TO has the most percentage while Corporate has the least.\n",
         "\n",
-        "9. The length of the stay decreases as ADR increases probably to reduce the cost."
+        "11. The length of the stay decreases as ADR increases probably to reduce the cost.\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Fjb1IsQkh3yE"
+        "id": "dp963R1xgRKW"
       }
     },
     {
